src/ui/lidarr_ui/indexers/snapshots/managarr__ui__lidarr_ui__indexers__indexers_ui_tests__tests__snapshot_tests__indexers_ui_renders_indexer_settings_over_indexers.snap
---
source: src/ui/lidarr_ui/indexers/indexers_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Indexer                              RSS                   Automatic Search      Interactive Search    Priority              Tags                                 
=> Test Indexer                         Enabled               Enabled               Enabled               25                    alex                                 
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                             ╭───────────────────  Configure All Indexer Settings  ───────────────────╮                                              
                                             │                                                                        │                                              
                                             │                                                                        │                                              
                                             │                                                                        │                                              
                                             │                                   ╭────────────────────────────────╮   │                                              
                                             │         Minimum Age (minutes) ▴▾: │11                              │   │                                              
                                             │                                   ╰────────────────────────────────╯   │                                              
                                             │                                   ╭────────────────────────────────╮   │                                              
                                             │              Retention (days) ▴▾: │29                              │   │                                              
                                             │                                   ╰────────────────────────────────╯   │                                              
                                             │                                   ╭────────────────────────────────╮   │                                              
                                             │             Maximum Size (MB) ▴▾: │12345                           │   │                                              
                                             │                                   ╰────────────────────────────────╯   │                                              
                                             │                                   ╭────────────────────────────────╮   │                                              
                                             │   RSS Sync Interval (minutes) ▴▾: │60                              │   │                                              
                                             │                                   ╰────────────────────────────────╯   │                                              
                                             │                                                                        │                                              
                                             │                                                                        │                                              
                                             │                  ╭────────────────╮╭────────────────╮                  │                                              
                                             │                  │      Save      ││     Cancel     │                  │                                              
                                             │                  ╰────────────────╯╰────────────────╯                  │                                              
                                             ╰────────────────────────────────────────────────────────────────────────╯
